# CMake-tutorial

./: README.md
1-Source-file/: README.md
1-Source-file/CMake/: CMakeLists.txt
1-Source-file/Make/: hello_world.cpp
2-Library/: README.md
2-Library/CMake1/: CMakeLists.txt  main.cpp
2-Library/CMake1/math/: math.cpp  math.h
2-Library/CMake2/: main.cpp
2-Library/CMake2/math/: CMakeLists.txt
2-Library/CMake3/: CMakeLists.txt
2-Library/CMake3/math/: CMakeLists.txt  math.h
3-External-library/: README.md
3-External-library/FetchContent/: CMakeLists.txt  math_test.cpp
3-External-library/FetchContent/math/: CMakeLists.txt  math.cpp  math.h
4-CMake-presets/: CMakeLists.txt  CMakePresets.json  README.md
